fix java 8 compilation errors due to flexible super constructor in QuorridorBoard & getFirst() in List